// shippy-service-consignment/proto/consignment/consignment.proto
syntax = "proto3";

package chaos_generator;

service ChaosAgent {
    rpc AddTests(TestCollection) returns (Response) {}
    rpc GetTestStatus(Request) returns (TestStatus) {}
    rpc IsAlive(Request) returns (Response) {}
    rpc StartTestRun(TestParameters) returns (Response) {}
    rpc StopTestRun(StopTestRequest) returns (Response) {}
    rpc UpdateTestRun(TestParameters) returns (Response) {}
    rpc GetVersion(Request) returns (GetVersionResponse) {}
    rpc DeleteTests(DeleteTestsRequest) returns (DeleteTestsResponse) {}
}

message TestCollection {
    string name = 1;
    repeated Test tests = 2;
}

message Test {
    string name = 1;
    string method = 2;
    string url = 3;
    string body = 4;
    repeated Header headers = 5;
    int32 responseCode = 6;
    string responseBody = 7;
}

message Header {
    string name = 1;
    string value = 2;
}

message TestStatus {
    string testCollectionName = 1;
    int64 requestsExecuted = 2;
    int64 transactionsPerSecond = 3;
    int64 averageExecutionTime = 4;
    double cpu = 5;
    int32 simulatedUsers = 6;
    int64 errorsPerSecond = 7;
    int32 errorsRaised = 8;
    int64 executionTime = 9;
}

message TestParameters {
    int32 simulatedusers = 1;
    string testCollectionName = 2;
}

message StopTestRequest {
    string testName = 1;
}

message GetVersionResponse {
    string version = 1;
    string hostname = 2;
}

message Request {

}

message Response {
    int32 status = 1;
    bool result = 2;
}


message DeleteTestsRequest {
}

message DeleteTestsResponse {
}